@@ -452,6 +452,16 @@ CHARCREATIONSCRIPTS=
 # value is 5.
 MAXITEMSHOWN=5
 
+# The DEFAULTPLAYERFLAGS is a comma-delimited list of player 
+# flags to turn on by default when a player is first created,
+# or for the time before they log in.  Options include:
+# AUTOGOLD, AUTOLOOT, AUTOEXITS, AUTOASSIST, ANSI COLOR, SYSMSGS, 
+# AUTOMELEE, PLAYERKILL, BRIEF, NOFOLLOW, AUTOWEATHER, AUTODRAW, 
+# AUTOGUARD, SOUNDS, AUTOIMPROVEMENT, NOTEACH, AUTONOTIFY, 
+# AUTOFORWARD, MOTD, QUIET, MXP, COMPRESSED, AUTORUN
+# Default is empty.
+DEFAULTPLAYERFLAGS=
+
 ######################################################################
 # Ability/Skill related configuration variables
 ######################################################################
