@@ -747,6 +747,13 @@
         <FONT COLOR=WHITE>@INIValue?MASK=MAXITEMSHOWN&INIHELP@
         </TD></TR>
 		
+        <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>DEFAULTPLAYERFLAGS</FONT>
+        </TD><TD WIDTH=80% VALIGN=TOP>
+        <INPUT TYPE=TEXT NAME=DEFAULTPLAYERFLAGS SIZE=60 VALUE="@INIValue?MASK=DEFAULTPLAYERFLAGS&VALUE@">
+        <BR>
+        <FONT COLOR=WHITE>@INIValue?MASK=DEFAULTPLAYERFLAGS&INIHELP@
+        </TD></TR>
+		
 		</TABLE>
 	@endif@
 	@if?CheckReqParm?INIPAGE=COMBAT@
