@@ -2188,3 +2188,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 	part of the upgrade instructions regarding deleting your old "com" directory before 
 	running the new build.
 48. CoffeeMud-bug values dropped 700 points in overnight debugging.
+# Build 5.5.3 Release ?
+1. New INI entry: DEFAULTPLAYERFLAGS
+2. 
